# sketchybartender

./: README.md  install.sh  sketchybarrc  sketchybartender.default.json  sketchybartender.json
sketchybarbouncer/src/: main.swift
sketchybartender/: Cargo.toml
sketchybartender/src/: aerospace.rs  aerospace_focus.rs  config.rs  daemon.rs  handlers.rs  mach_client.rs  main.rs  monitor_map.rs  providers.rs  sketchycli.rs
