[package]
name = "sketchybartender"
version = "0.1.0"
edition = "2021"
description = "High-performance sketchybar helper daemon"

[[bin]]
name = "sketchybartender"
path = "src/main.rs"

[[bin]]
name = "sketchycli"
path = "src/sketchycli.rs"

[dependencies]
phf = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mach2 = "0.6"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf_codegen = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
